--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "prisma:seed": "ts-node prisma/seed.ts",
+    "prisma:reset": "prisma migrate reset --force",
+    "build": "tsc",
+    "ts:check": "tsc --noEmit"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
@@ -14,7 +21,10 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/node": "^20.11.24",
     "nodemon": "^3.1.0",
-    "prisma": "^6.9.0"
+    "prisma": "^6.9.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
