--- a/package.json
+++ b/package.json
@@ -2,29 +2,35 @@
   "name": "tapper",
   "packageManager": "yarn@4.9.2",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "prisma:seed": "ts-node prisma/seed.ts",
-    "prisma:reset": "prisma migrate reset --force",
     "build": "tsc",
-    "ts:check": "tsc --noEmit"
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "ts:check": "tsc --noEmit",
+    "prisma:seed": "ts-node prisma/seed.ts",
+    "prisma:reset": "prisma migrate reset --force"
   },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "^5.10.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "nodemon": "^3.1.0",
-    "prisma": "^6.9.0",
+    "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
