--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,14 @@
-nodeLinker: node-modules
+nodeLinker: pnp
 
 yarnPath: .yarn/releases/yarn-4.9.2.cjs
+
+pnpMode: loose
+
+pnpFallbackMode: all
+
+packageExtensions:
+  "@prisma/client@*":
+    peerDependencies:
+      "typescript": "*"
+    dependencies:
+      ".prisma": "*"
