--- a/package.json
+++ b/package.json
@@ -2,35 +2,19 @@
   "name": "tapper",
   "packageManager": "yarn@4.9.2",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "ts:check": "tsc --noEmit",
-    "prisma:seed": "ts-node prisma/seed.ts",
-    "prisma:reset": "prisma migrate reset --force"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^5.10.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "api:dev": "yarn workspace @tapper/api dev",
+    "api:build": "yarn workspace @tapper/api build",
+    "api:start": "yarn workspace @tapper/api start",
+    "prisma:generate": "yarn workspace @tapper/prisma generate",
+    "prisma:seed": "yarn workspace @tapper/prisma seed",
+    "prisma:reset": "yarn workspace @tapper/prisma reset"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.24",
-    "nodemon": "^3.1.0",
-    "prisma": "^5.10.2",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "@yarnpkg/pnpify": "^4.1.5"
   }
 }
