--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -2,7 +2,12 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "."
+    "rootDir": "src",
+    "baseUrl": ".",
+    "composite": true,
+    "declaration": true
   },
-  "include": ["prisma/**/*"]
+  "include": [
+    "src/**/*"
+  ]
 } 
