--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": "src",
     "baseUrl": ".",
     "composite": true,
-    "declaration": true
+    "declaration": true,
+    "preserveSymlinks": true
   },
   "include": [
     "src/**/*"
