--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prisma:reset": "yarn workspace @tapper/prisma reset"
   },
   "devDependencies": {
-    "@yarnpkg/pnpify": "^4.1.5"
+    "@yarnpkg/pnpify": "^4.1.5",
+    "esprima": "^4.0.1",
+    "supports-color": "^10.0.0"
   }
 }
