--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -4,20 +4,19 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "yarn generate && yarn tsc && copyfiles -u 1 \"src/generated/**\" dist",
     "generate": "pnpify prisma generate",
     "seed": "pnpify ts-node src/seed.ts",
     "reset": "pnpify prisma migrate reset --force"
   },
   "dependencies": {
-    "@prisma/client": "5.10.2",
-    "esprima": "^4.0.1",
-    "supports-color": "^10.0.0"
+    "@prisma/client": "5.10.2"
   },
   "devDependencies": {
     "@types/esprima": "^4",
     "@types/node": "^20.11.24",
     "@yarnpkg/pnpify": "^4.1.5",
+    "copyfiles": "^2.4.1",
     "prisma": "5.10.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
