--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "api:start": "yarn workspace @tapper/api start",
     "prisma:generate": "yarn workspace @tapper/prisma generate",
     "prisma:seed": "yarn workspace @tapper/prisma seed",
-    "prisma:reset": "yarn workspace @tapper/prisma reset"
+    "prisma:reset": "yarn workspace @tapper/prisma reset",
+    "prisma:test": "yarn workspace @tapper/prisma test",
+    "prisma:test:generate": "yarn workspace @tapper/prisma test:generate",
+    "prisma:test:build": "yarn workspace @tapper/prisma test:build",
+    "prisma:test:reset": "yarn workspace @tapper/prisma test:reset",
+    "prisma:test:seed": "yarn workspace @tapper/prisma test:seed"
   },
   "devDependencies": {
     "@yarnpkg/pnpify": "^4.1.5",
