--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -6,7 +6,8 @@
     "baseUrl": ".",
     "composite": true,
     "declaration": true,
-    "preserveSymlinks": true
+    "preserveSymlinks": true,
+    "types": ["node"]
   },
   "include": [
     "src/**/*"
