--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -5,15 +5,16 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "yarn generate && yarn tsc && copyfiles -u 1 \"src/generated/**\" dist",
+    "clean": "rm -rf dist tsconfig.tsbuildinfo",
     "generate": "pnpify prisma generate",
-    "seed": "tsc && node dist/seed.js",
     "reset": "pnpify prisma migrate reset --force",
+    "seed": "tsc && node dist/seed.js",
     "test": "yarn test:setup",
-    "test:setup": "tsc && node dist/test-setup.js",
-    "test:generate": "tsc && node dist/test-setup.js generate",
     "test:build": "tsc && node dist/test-setup.js build",
+    "test:generate": "tsc && node dist/test-setup.js generate",
     "test:reset": "tsc && node dist/test-setup.js reset",
-    "test:seed": "tsc && node dist/test-setup.js seed"
+    "test:seed": "tsc && node dist/test-setup.js seed",
+    "test:setup": "tsc && node dist/test-setup.js"
   },
   "dependencies": {
     "@prisma/client": "5.10.2"
