--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,17 +2,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": ["ES2020", "DOM"],
+    "lib": ["ES2020"],
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
     "declaration": true,
     "sourceMap": true,
-    "composite": true,
-    "declarationMap": true
-  },
-  "exclude": ["node_modules"]
+    "composite": true
+  }
 } 
